--- a/index_list/css/index.css
+++ b/index_list/css/index.css
@@ -277,7 +277,7 @@
 
 .kind_span {
     margin-right: 5%;
-    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .index_img {
@@ -298,10 +298,6 @@
 
 .index_img img:hover {
     transform: scale(1.2, 1.2);
-}
-
-.water_fall .kind_span:nth-child(1),.water_fall .kind_span:nth-child(2){
-    margin-bottom: 10px;
 }
 
 .kind_span span:hover {
@@ -359,7 +355,7 @@
         left: 230px; */
         width: 500px;
     }
-    .chk_css{
+    .chk_css {
         padding: 10px 10px;
         display: flex;
         flex-wrap: wrap;
@@ -418,7 +414,7 @@
         left: 135px; */
         width: 450px;
     }
-    .chk_css{
+    .chk_css {
         padding: 5px 5px 0px 5px;
     }
     .chk_item {
