--- a/index_list/css/restaurant_page.css
+++ b/index_list/css/restaurant_page.css
@@ -94,6 +94,7 @@
 }
 
 .top_flex > input {
+    width: 72px;
     height: 36px;
     background-color: #8b1038;
     color: #fcc106;
@@ -120,6 +121,24 @@ div.flex1 {
     margin-left: 50px;
 }
 
+.mid_flex {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.comment_img_wrapper > img {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+
+.record_time {
+    font-size: 1em;
+}
+
 .shop_wrapper > a {
     text-decoration: none;
     cursor: pointer;
@@ -132,6 +151,10 @@ div.flex1 {
     position: relative;
     flex: 1;
     font-size: 1.4rem;
+}
+
+.shop_title span {
+    margin-left: 10px;
 }
 
 .shop_rate_wrapper {
@@ -157,7 +180,7 @@ div.flex1 {
     font-weight: 900;
 }
 
-.fa-comment-alt .fa-heart .fa-map-marked-alt .fa-bars {
+.fa-comment-alt .fa-heart .fa-map-marked-alt .fa-bars .fa-plus-circle {
     margin-right: 4px;
     font-weight: 400;
     display: inline-block;
@@ -166,6 +189,12 @@ div.flex1 {
     text-rendering: auto;
     line-height: 1;
 }
+
+.fa-plus-circle {
+    font-size: 1.8em;
+    color: #8b1038;
+}
+
 
 .service_box {
     position: relative;
@@ -188,12 +217,14 @@ div.flex1 {
     line-height: 3;
 }
 
+.show_comment_modal {
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
 
-
-.shop_container,
-.comment > textarea
+.shop_container
 {
     width: 100%;
     height: 200px;
@@ -241,22 +272,30 @@ div.flex1 {
     border: 1px solid grey;
 }
 
-.comment > textarea
-{
+.comment_left .comment_right {
     width: 100%;
-    height: 200px;
-    font-size: 18px;
-    font-weight: bold;
-    padding-top: 5px;
-    padding-left: 20px;
-    border: 1px solid grey;
-    border-radius: 3px;
-    margin-bottom: 10px;
+    float: none;
 }
 
-.comment > textarea:hover
-{
-    border: 3px solid gray;
+.comment_left > .main_comment {
+    line-height: 1.8;
+    max-height: none;
+    margin-top: 10px;
+}
+
+.comment_right .comment_right_pic {
+    margin-top: 20px;
+    list-style: none;
+}
+
+.comment_right .comment_right_pic li {
+    border: 1px solid #fff;
+    overflow: hidden;
+}
+
+.pic_item > img {
+    height: 120px;
+    /* width: 100%; */
 }
 
 /* ---------- body over ---------- */
