--- a/index_list/css/restaurant_login.css
+++ b/index_list/css/restaurant_login.css
@@ -1,35 +1,36 @@
 .restaurant_login_container {
     width: 440px;
-    height: 60vh;
-    margin: 120px auto;
-    padding: 10px 10px;
+    height: 58vh;
+    margin: 80px auto;
+    padding: 5px 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     border: 2px solid #707070;
     border-radius: 5px;
-}
-
-.restaurant_login_title {
+    font-weight: bold;
+  }
+  
+  .restaurant_login_title {
     font-size: 28px;
     width: 100%;
     text-align: center;
-    margin: 10px 0;
-}
-
-.form-group {
+    margin-bottom: -30px;
+  }
+  
+  .form-group {
     margin: 10px 0;
     padding: 10px 0;
-}
-
-.form-group > input {
+  }
+  
+  .form-group > input {
     width: 300px;
     height: 40px;
     justify-content: center;
-}
-
-.btn_member_login {
+  }
+  
+  .btn_member_login {
     background-color: #8b1309;
     color: #fff;
     font-size: 18px;
@@ -37,76 +38,102 @@
     border: none;
     border-radius: 5px;
     transition: 0.3s;
-}
-
-.btn_member_login:hover {
+  }
+  
+  .btn_member_login:hover {
     background-color: #a30f01;
-}
-
-.form-group .span_container {
+  }
+  
+  .form-group .span_container {
     width: 100%;
     font-size: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
-
-#remember_password {
+  }
+  
+  #remember_password {
     width: 20px;
     height: 20px;
-}
-
-/* ---------- body over ---------- */
-
-
-
-/* ---------- footer_page start ---------- */
-
-.footer_page {
+  }
+  
+  .forgot a{
+    text-decoration: none;
+    font-size: 16px;
+    position: relative;
+    right: 28px;
+  }
+  
+  .forgot input {
+    position: relative;
+    left: 28px;
+  }
+  
+  .forgot span {
+    font-size: 16px;
+    position: relative;
+    bottom: 4px;
+    left: 30px;
+  }
+  
+  .reportSpan {
+    height: 5vh;
+    color: red;
+    margin-top: -75px;
+    margin-right: -230px;
+  }
+  
+  /* ---------- body over ---------- */
+  
+  
+  
+  /* ---------- footer_page start ---------- */
+  
+  .footer_page {
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-/* ---------- footer_page over ---------- */
-
-/* RWD start */
-
-
-/* 超大型螢幕 */
-
-@media screen and (max-width:1200px) {
-
-}
-
-
-/* 大型螢幕 */
-
-@media screen and (max-width:992px) {
-}
-
-
-/* 平板 */
-
-@media screen and (max-width:768px) {
-
-}
-
-
-/* 手機 */
-
-@media screen and (max-width:576px) {
+  }
+  
+  /* ---------- footer_page over ---------- */
+  
+  /* RWD start */
+  
+  
+  /* 超大型螢幕 */
+  
+  @media screen and (max-width:1200px) {
+  
+  }
+  
+  
+  /* 大型螢幕 */
+  
+  @media screen and (max-width:992px) {
+  }
+  
+  
+  /* 平板 */
+  
+  @media screen and (max-width:768px) {
+  
+  }
+  
+  
+  /* 手機 */
+  
+  @media screen and (max-width:576px) {
     .restaurant_login_container{
         border: none;
     }
-}
-
-
-/* 小手機 */
-
-@media screen and (max-width:480px) {
+  }
+  
+  
+  /* 小手機 */
+  
+  @media screen and (max-width:480px) {
    
-}
-
-
-/* RWD end */
+  }
+  
+  
+  /* RWD end */
