--- a/index_list/css/orderfinish.css
+++ b/index_list/css/orderfinish.css
@@ -1,27 +1,33 @@
 body {
-  font-size: 16px;
+  font-size: 18px;
 }
 
+
 .order_finish {
-  width: 300px;
-  height: 160px;
+  width: 500px;
+  height: 260px;
   border: solid 1.5px #707070;
   border-radius: 5px;
   text-align: center;
+  align-items: center;
   margin: 0 auto;
+  position: relative;
 }
 
+
+
 .order_finish p {
-  padding-top:20%;
+  padding-top:23%;
 }
 
 .buy_back_btn {
-  width: 120px;
-  height: 30px;
+  width: 200px;
+  height: 40px;
   background-color: #403c3c;
   color: white;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .buy_back_btn:hover{
@@ -29,11 +35,14 @@ body {
 }
 
  #back_to_home {
- margin-top: 10px;
- margin-left: 55px;
+ position: relative;
+ left: 300px;
+ top: 10px;
+
 }
 
 #check_order{
+  position: absolute;
   margin-top: 10px ;
 } 
 
@@ -56,4 +65,30 @@ body {
       position: static;
       margin-top: 20px;
   }
+}
+
+
+@media screen and (max-width:768px){
+  .order_finish {
+    width: 300px;
+    height: 160px;
+    border: solid 1.5px #707070;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .buy_back_btn {
+    width: 120px;
+    height: 30px;
+    background-color: #403c3c;
+    color: white;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: 400;
+  }
+  #back_to_home {
+    margin-top: 10px;
+    margin-left: 55px;
+   }
 }
