--- a/index_list/css/restaurant_self_pick_up.css
+++ b/index_list/css/restaurant_self_pick_up.css
@@ -1,26 +1,12 @@
+.test {
+    display: none;
+}
 aside {
     background-color: #403C3C;
     width: 230px;
     height: 85vh;
     position: fixed;
-    top: 12%;
-}
-
-.search {
-    padding: 10px 0px 5px 5px;
-    border-bottom: 1px solid white;
-    color: white;
-    font-weight: bold;
-    font-size: 24px;
-}
-
-.search input {
-    height: 4vh;
-    width: 160px;
-    position: absolute;
-    right: 13px;
-    top: 13px;
-    font-size: 14px;
+    top: 10%;
 }
 
 .panel-default{
@@ -59,19 +45,44 @@ aside {
     font-weight: 600;
 }
 
+.sreach_form {
+    /* border: 1px solid red; */
+    padding: 0 10px 5px 10px;
+}
+
+.form_textbox {
+    margin-bottom: -6px;
+}
+
 .container{
-    height: 83vh;  
+    height: 83vh;    
+}
+
+.search-bar {
+    position: relative;
+    left: 35px;
+}
+.search-bar button {
+    height: 30px;
+    font-weight: 600;
+}
+
+.search-bar button:hover {
+    background-color: rgb(165, 164, 164);
+}
+
+.search-bar input {
+    width: 1000px;
 }
 
 .container .order_table {
     position: absolute;
-    top: 100px;
+    top: 120px;
     left: 16%;
     width: 80%;
 }
 
 .member_info{
-    
     margin-top: 60px;
 }
 
@@ -111,10 +122,15 @@ label{
     font-family: Noto Sans TC;
 }
 
+thead {
+    position: relative;
+    right: 20px;
+}
+
 th{
     text-align: center;
     position: relative;
-    left: 25px;
+    left: 20px;
     letter-spacing: 5px;
 }
 
@@ -122,8 +138,12 @@ td{
     text-align: center;
 }
 
-.detail_btn {
+tbody .detail_btn {
     border-radius: 8px;
+}
+
+.detail_btn:hover {
+    background-color: gray;
 }
 
 .comment_btn{
@@ -141,6 +161,8 @@ td{
 .modal-title{
     font-family: Noto Sans TC;
     font-size: 24px;
+    
+    
 }
 .detail_modal_body{
     margin-top: 50px;
@@ -169,21 +191,197 @@ td{
     top: -40px;
 
 }
-.ratings {
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    color: #ddd; /*背景星星顏色*/
-    overflow: hidden;
-    font-size: 40px; /*調整字體大小可放大縮小星星*/
-    text-shadow: 0px 1px 0 #999;
+.modal-title {
+    font-weight: bold;
+}
+.detail_modal_body {
+   font-size: 20px;
+   letter-spacing: 2px;
+   position: relative;
+   right: 40px;
+}
+
+/* RWD */
+
+
+/* 超大型螢幕 */
+@media screen and (max-width:1200px) {
+    header a img {
+        width: 100%;
+        height: 50px;
     }
-.full_star {
-    width: 100%; /*調整寬度可變更星等*/
-    position: absolute;
-    left: 0;
-    top: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    color: orange; /*前景星星顏色*/
+    .nav_icon a {
+        font-size: 19px;
+        margin-right: 10px;
+    }
+    .footer_link {
+        justify-content: center;
+    }
+    aside {
+        background-color: #403C3C;
+        width: 150px;
+        height: 82vh;
+        position: fixed;
+        top: 12%;
+    }
+
+    .panel-title {
+        font-size: 20px;
+        padding-top: 8px;
+    }
+
+    .panel .little_title a  {
+        text-decoration: none;
+        color: white;
+        font-size: 13px;
+        font-weight: 600;
+    }
+    .container{
+        height: 80vh;    
+    }
+
+    .sreach_form {
+    /* border: 1px solid red; */
+    padding: 0 0px 0px 10px;
+    }
+
+    .sreach_form .form_textbox {
+        margin-bottom: 0px;
+    }
+
+    .container .order_table {
+       margin-top: -15px;
+    }
+
+    th{
+        font-size: 10px;
+        text-align: center;
+        position: relative;
+        left: 10px;
+        letter-spacing: 0px;
+    }
+    
+    td{
+        font-size: 10px;
+        text-align: center;
+    }
+    
+    tbody .detail_btn {
+        border-radius: 8px;
+    }
+
+    tbody .cancel_btn {
+        margin-right: 100px;
+    }
+    
+    .comment_btn{
+        border-radius: 8px;
+    }
+    
+    .cancel_modal_body{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        text-align: center;
+        font-size: 28px;
+        font-family: Noto Sans TC;
+    }
+    
+    .modal-title{
+        font-family: Noto Sans TC;
+        font-size: 24px; 
+    }
+    .detail_modal_body{
+    
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: 150px;
+        font-size: 18px;
+        font-family: Noto Sans TC;
+    }
+    
+    .rank_modal_body{
+        position: relative;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-left: 150px;
+        font-family: Noto Sans TC;
+    }
+    
+    .modal-footer{
+        font-family: Noto Sans TC;
+    }
+    
+    .rank_modal_title{
+        position: absolute;
+        font-size: 28px;
+        left: -50px;
+        top: -40px;
+    
+    }
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+    header a img {
+        width: 100%;
+        height: 50px;
+    }
+    .nav_icon a {
+        font-size: 18px;
+        margin-right: 10px;
+    }
+
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    header a img {
+        width: 100%;
+        height: 50px;
+    }
+    .nav_icon a {
+        /* font-size: 16px;
+        margin-right: 10px; */
+        display: none;
+    }
+    .rwd_icon {
+        display: block;
+    }
+    .footer_text {
+        line-height: 40px;
+        height: 50px;
+        font-size: 14px;
+    }
+    .footer_link {
+        font-size: 14px;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    header a img {
+        width: 100%;
+        height: 50px;
+    }
+    /* .nav_icon a {
+        font-size: 14px;
+        margin-left: 0px;
+    } */
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+    .rwd_icon{
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+    }
 }
