--- a/index_list/css/orderfinish.css
+++ b/index_list/css/orderfinish.css
@@ -16,20 +16,22 @@ body {
 
 .order_finish p {
   padding-top:23%;
+  
 }
 
 .buy_back_btn {
-  width: 200px;
-  height: 40px;
-  background-color: #403c3c;
+  width: 250px;
+  height: 50px;
+  background-color: #4b4747;
   color: white;
   border-radius: 5px;
   font-size: 18px;
   font-weight: 600;
+  
 }
 
 .buy_back_btn:hover{
-  background-color: #4b4747;
+  background-color: #8B1309;
 }
 
  #back_to_home {
@@ -49,6 +51,10 @@ body {
   margin: 5% auto;
   position: relative;
   right: 9%;
+}
+
+.buy_back_div{
+  margin-left: 280px;
 }
 
 .footer_page {
