--- a/index_list/css/orderdisplay.css
+++ b/index_list/css/orderdisplay.css
@@ -61,10 +61,13 @@ tbody td:nth-child(5) {
 }
 
 
-#order_share {
-  position: relative;
-  bottom:10%;
-  display:flex;
+.leader{
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 16pt;
+}
+.ordershare{
+  margin-left: 80px;
 }
 
 .share_member_table {
@@ -125,6 +128,19 @@ tbody td:nth-child(5) {
 }
 .close_btn{
   display: none;
+}
+
+#copyinput{
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.btn_copy{
+  font-size: 16px;
+  background-color: #8B1309;
+  color: #fff;
+  width: 100%;
+  height: 40px;
 }
 
 .footer_page {
