--- a/food-crossroads/src/css/booking_finish_page.css
+++ b/food-crossroads/src/css/booking_finish_page.css
@@ -9,9 +9,15 @@
 
 /* ---------- body start ---------- */
 
+
+.breadcrumb .breadcrumb-item a,.active{
+    font-size: 18px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
 .finish_container {
     width: 880px;
-    height: 60vh;
     background-color: #b5b4b477;
     display: flex;
     justify-content: center;
@@ -34,7 +40,7 @@
     /* border: 6px dashed orchid; */
     text-align: center;
     font-size: 24px;
-    font-weight: bolder;
+    font-weight: bold;
     margin: 10px auto;
 }
 
@@ -60,23 +66,28 @@
 }
 
 .finish_btn_booking_manage,
+.finish_btn_to_restaurant_page,
 .finish_btn_back_to_index
 {
     width: 200px;
     height: 40px;
     border-radius: 5px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
     color: #fff;
-    background-color: #8b1309;
+    background-color: #313030;
     margin: 0 10px;
 }
 
-.finish_btn_booking_manage,
-.finish_btn_back_to_index
+.finish_btn_booking_manage:hover,
+.finish_btn_to_restaurant_page:hover,
+.finish_btn_back_to_index:hover
 {
-    background-color: #313030;
+    background-color: #424141;
+    font-size: 22px;
 }
+
+
 
 /* ---------- body over ---------- */
 
