--- a/index_list/css/member_cancelbooking.css
+++ b/index_list/css/member_cancelbooking.css
@@ -1,48 +1,33 @@
-/* ----- ///// booking_finish_page ///// ----- */
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* ---------- body start ---------- */
-
-.breadcrumb .breadcrumb-item a,
-.active {
-  font-size: 18px;
-  font-weight: bolder;
-  text-decoration: none;
+.div_content {
+  background-color: black;
 }
 
-.finish_container {
+.cancel_container {
   width: 880px;
   background-color: #b5b4b477;
   display: flex;
   justify-content: center;
-  margin: 10px auto;
+  margin: 120px auto;
   padding: 20px 0;
   border-radius: 5px;
   /* border: 2px solid red; */
 }
 
-.finish_form_title {
-  width: 100%;
-  font-size: 36px;
-  color: black;
-  text-align: center;
-  /* border: 4px solid yellowgreen; */
-}
-
-.finish_form_show {
+.cancel_form_show {
   /* border: 6px dashed orchid; */
   text-align: center;
-  font-size: 24px;
+  font-size: 28px;
   font-weight: bold;
   margin: 10px auto;
 }
 
-.form_container_finish_wrapper {
+.form_container_cancel_wrapper {
   /* border: 2px solid darkblue; */
   width: 300px;
   height: 280px;
@@ -55,7 +40,7 @@
   align-items: center;
 }
 
-.btn_container_finish {
+.btn_container_cancel {
   display: flex;
   flex-direction: row;
   padding: 10px 10px;
@@ -63,9 +48,7 @@
   /* border: 2px solid black; */
 }
 
-.finish_btn_booking_manage,
-.finish_btn_to_restaurant_page,
-.finish_btn_back_to_index {
+.cancel_btn_booking_manage {
   width: 200px;
   height: 40px;
   border-radius: 5px;
@@ -76,13 +59,24 @@
   margin: 0 10px;
 }
 
-.finish_btn_booking_manage:hover,
-.finish_btn_to_restaurant_page:hover,
-.finish_btn_back_to_index:hover {
+.cancel_btn_ok {
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #8b1309;
+  margin: 0 10px;
+}
+.cancel_btn_booking_manage:hover {
   background-color: #424141;
   font-size: 22px;
 }
-
+.cancel_btn_ok:hover {
+  background-color: #f04535;
+  font-size: 22px;
+}
 /* ---------- body over ---------- */
 
 /* ---------- footer_page start ---------- */
