--- a/food-crossroads/src/css/restaurant_self_pick_up_history.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up_history.css
@@ -1,4 +1,4 @@
-#restaurant_self_pick_up_aside {
+#restaurant_history_list_aside {
     background-color: #403C3C;
     width: 230px;
     height: 90vh;
@@ -6,21 +6,21 @@
     top: 10%;
 }
 
-#restaurant_self_pick_up_aside .panel-default{
+#restaurant_history_list_aside .panel-default{
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
 }
 
-#restaurant_self_pick_up_aside .default{
+#restaurant_history_list_aside .default{
     background-color: #8B1309;
 }
 
-#restaurant_self_pick_up_aside .panel-title {
+#restaurant_history_list_aside .panel-title {
     padding-top: 8px;
 }
 
-#restaurant_self_pick_up_aside .panel-heading .panel-title a {
+#restaurant_history_list_aside .panel-heading .panel-title a {
     font-weight: 600;
     color: white;
     text-decoration: none;
@@ -28,17 +28,17 @@
     width: 100%;
 }
 
-#restaurant_self_pick_up_aside .little_title {
+#restaurant_history_list_aside .little_title {
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
 }
 
-#restaurant_self_pick_up_aside .little_title:hover {
+#restaurant_history_list_aside .little_title:hover {
     background-color: #8B1309;
 }
 
-#restaurant_self_pick_up_aside .panel .little_title a  {
+#restaurant_history_list_aside .panel .little_title a  {
     text-decoration: none;
     color: white;
     font-weight: 600;
@@ -48,41 +48,53 @@
     height: 83vh;    
 } */
 
-#restaurant_self_pick_up .search_bar {
+#restaurant_history_list .search_bar {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-#restaurant_self_pick_up .search_bar h3{
-    position: relative;
-    left: 20px;
-    top: 10px;
+#restaurant_history_list .search_bar h3{
     font-weight: 600;
     margin-right: 500px;
 }
 
-#restaurant_self_pick_up .search_bar input[type=text]{
+#restaurant_history_list .search_bar input[type=text]{
     border: none;  
     width: 90%;
 }
 
-#restaurant_self_pick_up .search_bar input[type=text]:focus{
+#restaurant_history_list .search_bar input[type=text]:focus{
     outline: none;
 }
 
-#restaurant_self_pick_up .search_bar button {
+#restaurant_history_list .search_bar button {
     height: 40px;
     background-color: #FCC106;
     border-radius: 5px;
     padding: 2px 10px;
 }
 
-#restaurant_self_pick_up .search_bar button:hover {
+#restaurant_history_list .search_bar button:hover {
     background-color: #f0b802;
 }
 
-#restaurant_self_pick_up .search_bar_div{
+#restaurant_history_list .search_bar {
+    position: relative;
+    top: 10px;
+    left: 20px;
+}
+
+#restaurant_history_list th{
+    font-size: 16px;
+    text-align: center;
+    position: relative;
+    left: 20px;
+    letter-spacing: 5px;
+    width: 110px;   
+}
+
+#restaurant_history_list .search_bar_div{
     border: 1px solid #999999;
     border-radius: 5px;
     padding: 5px;
@@ -90,49 +102,41 @@
     margin-right: 10px;
 }
 
-#restaurant_self_pick_up .container .order_table {
+#restaurant_history_list .container .order_table {
     position: absolute;
     top: 140px;
     left: 16%;
     width: 80%;
 }
 
-#restaurant_self_pick_up label{
+#restaurant_history_list label{
     margin-right: 20px;
 }
 
-#restaurant_self_pick_up thead {
+#restaurant_history_list thead {
     position: relative;
     right: 20px;
 }
 
-#restaurant_self_pick_up th{
-    font-size: 16px;
+#restaurant_history_list th{
     text-align: center;
     position: relative;
     left: 20px;
     letter-spacing: 5px;
-    width: 100px;
 }
 
-#restaurant_self_pick_up td{
-    text-align: center;
+#restaurant_history_list .table td{
+  width: 100px;  
 }
 
-#restaurant_self_pick_up tbody input[type=checkbox]{
-    width: 16px;
-    height: 16px;
-    margin-left: 15px;
-}
-
-#restaurant_self_pick_up tbody .detail_btn,.cancel_btn {
+#restaurant_history_list tbody .detail_btn,.cancel_btn {
     border-radius: 5px;
     border: none;
     padding: 5px 8px;
     transition: 0.3s;
 }
 
-#restaurant_self_pick_up .modal-footer .detail_btn,#restaurant_self_pick_up .modal-footer .cancel_btn {
+#restaurant_history_list .modal-footer .detail_btn,#restaurant_history_list .modal-footer .cancel_btn {
     border-radius: 5px;
     border: none;
     font-size: 18px;
@@ -140,69 +144,71 @@
     transition: 0.3s;
 }
 
-#restaurant_self_pick_up tbody .detail_btn,#restaurant_self_pick_up .modal-footer .detail_btn{
+#restaurant_history_list tbody .detail_btn,#restaurant_history_list .modal-footer .detail_btn{
     border: 2px solid #403C3C;
 }
 
-#restaurant_self_pick_up .detail_btn:hover {
+#restaurant_history_list .detail_btn:hover {
     background-color: #524d4d;
     color: #fff;
 }
 
-#restaurant_self_pick_up .modal-footer .detail_btn:hover{
+#restaurant_history_list .modal-footer .detail_btn:hover{
     background-color: #524d4d
 }
 
-#restaurant_self_pick_up .cancel_btn,#restaurant_self_pick_up .modal-footer .cancel_btn{
+#restaurant_history_list .cancel_btn,#restaurant_history_list .modal-footer .cancel_btn{
     background-color: #8b1309;
     color: #fff;
 }
 
-#restaurant_self_pick_up .cancel_btn:hover{
+#restaurant_history_list .cancel_btn:hover{
     background-color: #a30f01;
 }
 
-#restaurant_self_pick_up .modal-footer .cancel_btn:hover{
+#restaurant_history_list .modal-footer .cancel_btn:hover{
     background-color: #a30f01;
 }
 
-#restaurant_self_pick_up .cancel_modal_body{
+
+#restaurant_history_list .cancel_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
     font-size: 28px;
 }
 
-#restaurant_self_pick_up .modal-title{
+#restaurant_history_list .modal-title{
     font-size: 24px;
 }
 
-#restaurant_self_pick_up .detail_modal_body{
+#restaurant_history_list .detail_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 150px;
     font-size: 18px;
 }
 
-#restaurant_self_pick_up .rank_modal_body{
+#restaurant_history_list .rank_modal_body{
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
     margin-left: 150px;
 }
 
-#restaurant_self_pick_up .rank_modal_title{
+#restaurant_history_list .rank_modal_title{
     position: absolute;
     font-size: 28px;
     left: -50px;
     top: -40px;
+
 }
 
-#restaurant_self_pick_up .modal-title {
+#restaurant_history_list .modal-title {
     font-weight: bold;
 }
 
-#restaurant_self_pick_up .detail_modal_body {
+#restaurant_history_list .detail_modal_body {
    font-size: 20px;
    letter-spacing: 2px;
    position: relative;
@@ -214,20 +220,20 @@
 
 /* 超大型螢幕 */
 @media screen and (max-width:1200px) {
-    #restaurant_self_pick_up_aside {
+    #restaurant_history_list_aside {
         background-color: #403C3C;
         width: 150px;
-        height: 82vh;
+        height: 88vh;
         position: fixed;
-        top: 12%;
+        top: 10%;
     }
 
-    #restaurant_self_pick_up_aside .panel-title {
+    #restaurant_history_list_aside .panel-title {
         font-size: 20px;
         padding-top: 8px;
     }
 
-    #restaurant_self_pick_up_aside .panel .little_title a  {
+    #restaurant_history_list_aside .panel .little_title a  {
         text-decoration: none;
         color: white;
         font-size: 13px;
@@ -238,11 +244,11 @@
         height: 80vh;    
     } */
 
-    #restaurant_self_pick_up .container .order_table {
-        margin-top: -15px;
+    #restaurant_history_list .container .order_table {
+       margin-top: -15px;
     }
 
-    #restaurant_self_pick_up th{
+    #restaurant_history_list th{
         font-size: 10px;
         text-align: center;
         position: relative;
@@ -250,45 +256,36 @@
         letter-spacing: 0px;
     }
     
-    #restaurant_self_pick_up td{
+    #restaurant_history_list td{
         font-size: 10px;
         text-align: center;
     }
     
-    #restaurant_self_pick_up tbody .detail_btn {
-        border-radius: 8px;
-    }
-
-    #restaurant_self_pick_up tbody .cancel_btn {
-        margin-right: 100px;
-    }
-
-    #restaurant_self_pick_up .cancel_modal_body{
+    #restaurant_history_list .cancel_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         text-align: center;
         font-size: 28px;
     }
     
-    #restaurant_self_pick_up .modal-title{
+    #restaurant_history_list .modal-title{
         font-size: 24px; 
     }
-
-    #restaurant_self_pick_up .detail_modal_body{
+    #restaurant_history_list .detail_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         margin-left: 150px;
         font-size: 18px;
     }
     
-    #restaurant_self_pick_up .rank_modal_body{
+    #restaurant_history_list .rank_modal_body{
         position: relative;
         margin-top: 100px;
         margin-bottom: 100px;
         margin-left: 150px;
     }
     
-    #restaurant_self_pick_up.rank_modal_title{
+    #restaurant_history_list .rank_modal_title{
         position: absolute;
         font-size: 28px;
         left: -50px;
