--- a/food-crossroads/src/css/progress.css
+++ b/food-crossroads/src/css/progress.css
@@ -3,7 +3,9 @@
 
 .progress_container {
     width: 100%;
-    margin: 0 0 5px 0 ;
+    justify-content: center;
+    /* height: 30px; */
+    /* margin: 0 0 5px 0 ; */
 }
 
 .progress_ul li {
